# OOP_homeworks

./: README.md
class creature hw10/: README.md  evolution.cpp
class creature hw8/: .gitignore  CMakeLists.txt  README.md  evolution.cpp
class creature hw9/9_1/: README.md  evolution.cpp
class creature hw9/9_2/: README.md  evolution.cpp
class time hw3/: README.md  main.cpp  mytime.cpp
class time hw4/: mytime.cpp  mytime.h
class time hw5/: README.md  mytime.cpp
class time hw5/tests/: test_time.cpp
class time hw6/: CMakeLists.txt  README.md  main.cpp  main6_1.cpp  mytime.cpp  mytime.h
class time hw6/tests/: CMakeLists.txt  test_time.cpp
class time hw7/: README.md  main.cpp  mytime.cpp  mytime.h
class time hw7/7_1/: CMakeLists.txt  main7_1.cpp  mytime7_1.cpp  mytime7_1.h
class time hw7/7_2/: CMakeLists.txt  main7_2.cpp  mytime7_2.cpp  mytime7_2.h
fabric hw11/11_1/: CMakeLists.txt  README.md  fabric11_1.cpp
fabric hw11/11_2/: CMakeLists.txt  README.md  fabric11_2.cpp
